--- a/Loremhhotel/blog.html
+++ b/Loremhhotel/blog.html
@@ -31,7 +31,7 @@
             <li><a href="room.html"><span class="glyphicon glyphicon-bed" style="color: #fff;"></span> Rooms</a></li>
             <li><a href="blog.html"><span class="glyphicon glyphicon-book" style="color: #fff;"></span> Blog</a></li>
             <li><a href="gallery.html"><span class="glyphicon glyphicon-picture" style="color: #fff;"></span> Gallery</a></li>
-            <li><a href="About.html"><span class="glyphicon glyphicon-user" style="color: #fff;"></span> About</a></li>
+            <li><a href="about.html"><span class="glyphicon glyphicon-user" style="color: #fff;"></span> About</a></li>
 						</ul>
         </div>
       </div>
