--- a/Feedbackform/index.html
+++ b/Feedbackform/index.html
@@ -261,7 +261,7 @@
                           <h4>Any Other Feedback</h4>
                           <textarea name="Mytext" rows="8" cols="50"></textarea>
                         </div>
-                        <p> <h6>*The information given within the Feedback Form will be used for service improvement only and are strictly cofidential</h6> </p>
+                        <p> <h6>*The information given within the Feedback Form will be used for service improvement only and are strictly confidential</h6> </p>
                         <center>
                         <button type="submit" class="btn btn-default">Submit</button>
                         <button type="reset" class="btn btn-default">Reset</button>
